--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -62,8 +62,12 @@
   <java-symbol type="bool" name="config_intrusiveBatteryLed" />
   <java-symbol type="bool" name="config_multiColorBatteryLed" />
   <java-symbol type="bool" name="config_ledCanPulse" />
-
+  
+  <!-- Du anims -->
   <java-symbol type="anim" name="du_app_in" />
   <java-symbol type="anim" name="du_app_out" />
+
+  <!-- Screen Record -->
+    <java-symbol type="bool" name="config_enableScreenrecordChord" />
 </resources>
 
