--- a/packages/SystemUI/res/values/dot_strings.xml
+++ b/packages/SystemUI/res/values/dot_strings.xml
@@ -105,4 +105,7 @@
     <string name="screenrecord_notif_error">Unable to record screen</string>
     <string name="notification_channel_screenrecord">Screenrecords</string>
 
+    <!-- Screenrecord Tile -->
+    <string name="quick_settings_screenrecord">Screenrecord</string>
+
 </resources>
