Buttons: Bring up DU hardware key action binding framework
Change-Id: Iff30c0adf8d2329a021776d7e650eb28466ba904

--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -69,5 +69,9 @@
 
   <!-- Screen Record -->
     <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
+    <!-- Hardware key binding -->
+    <java-symbol type="integer" name="config_deviceHardwareKeys" />
+
 </resources>
 
