--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -73,6 +73,8 @@
     <!-- Hardware key binding -->
     <java-symbol type="integer" name="config_deviceHardwareKeys" />
 
+  <java-symbol type="bool" name="config_deviceHasButtonBacklight" />
+
   <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
   <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
 
