--- a/packages/SystemUI/res/layout/qs_footer_impl.xml
+++ b/packages/SystemUI/res/layout/qs_footer_impl.xml
@@ -109,6 +109,7 @@
             android:clipToPadding="false"
             android:clickable="true"
             android:focusable="true"
+            android:visibility="gone"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/accessibility_quick_settings_expand"
             android:padding="14dp" />
