re-arrange qs tile
Change-Id: Icc2fb0ec5ba16a59b210176c5bfaf180d1f08193
Signed-off-by: samgrande <talktosayan35@gmail.com>

QS: Add Sync QS Tile

mydongistiny: updated for oreo

Change-Id: I1c98c9d306a204aef436e806fcd39f7540967413

enable NFC tile

Change-Id: I2d2afa6602de4008b2f7f013ab70003016f21c5e
Signed-off-by: samgrande <talktosayan35@gmail.com>

Add USB Tether QS Tile

- Bring it to Oreo - LorDClockaN

Change-Id: I271881f40f6ba8e632ea96984b735832025dfc6a

Navigation Bar Tile

Thanks @KrapK for fling vectors

Change-Id: Ie3789c78a8bf04507d154c6588fa584ce8ccc925

Add Google Sound Search tile

Change-Id: I9eab7d8242bfd994464184898eed855f71e9a028

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -107,12 +107,12 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast
+        wifi,bt,dnd,flashlight,rotation,cell,location,hotspot,airplane
     </string>
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
-    <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night,pip,caffeine,screenshot,compass,sound,heads_up,screenrecord
+
+    <string name="quick_settings_tiles_stock" translatable="false">    wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night,pip,nfc,caffeine,screenshot,compass,sound,heads_up,screenrecord,sync,usb_tether,navigation,soundsearch
     </string>
 
     <!-- The tiles to display in QuickSettings -->
