--- a/packages/SystemUI/res/drawable/ic_qs_fling.xml
+++ b/packages/SystemUI/res/drawable/ic_qs_fling.xml
@@ -7,44 +7,11 @@
 
     <path
         android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M61,62.6H35.4L20.5,37.9l-15,24.8C11.5,80.3,28.3,93,48,93c19.9,0,36.7-12.9,42.7-30.7L76,49.9L61,62.6z" />
+        android:pathData="M43.39,43.38c-2.1 0.84 -2.94,1.26-5.46,3.78a15.29,15.29,0,0,0-3.78,5,20.42,20.42,0,0,0,0,10.07c2.1,5.46,7.56,9.66,13.44,9.66A15.07,15.07,0,0,0,61,63.11c1.68-3.35,1.68-8.81,0-11.75C57.67,44.22,51,41.28,43.39,43.38Zm7.14,16.8a3.92,3.92,0,0,1-6.72-2.94,3.77,3.77,0,0,1,5-3.78C52.21,54.3,53.05,57.66,50.53,60.18Z" />
     <path
         android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M21.3,33.5l15.7,26L60,59.5L73.7,48L60,36.5H35v-3h26.2L76,46l14.7-12.3C84.7,15.8,67.8,3,48,3C23.1,3,3,23.1,3,48 c0,3.6,0.4,7.2,1.3,10.5l15.4-25.1H21.3z M35,46.5h26v3H35V46.5z" />
+        android:pathData="M55.15,7.69c-0.84-3.78-5-6.72-8.82-5.88-5.46,1.26-7.56,8.4-3.36,12.6C47.59,19,56.41,14.41,55.15,7.69Z" />
     <path
         android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M91.6,59.2C92.5,55.6,93,51.9,93,48c0-3.9-0.5-7.6-1.4-11.2L78.4,48L91.6,59.2z" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M91.6,36.8" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M4.2,58.6" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M 5.4 62.6 L 5.4 62.6" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:fillAlpha="1"
-        android:strokeAlpha="1"
-        android:strokeWidth="1"
-        android:pathData="M 91.6 36.8 L 91.6 36.8" />
+        android:pathData="M87.48,26.16a5.91,5.91,0,0,0-0.42-3.77,6.43,6.43,0,0,0-4.62-4.62c-3.36-1.26-5.46-0.42-10.08,4.62l-3.78,3.77-2.1-1.25c-4.62-2.94-11.33-4.62-18.05-5-5.46-0.42-13.86,2.1-19.32,5l-1.68,1.67-4.19-4.19c-3.78-3.78-4.2-4.2-5.88-4.62-5-1.26-10.08,3.36-8.82,8.39 0.42 ,2.1 0.84 ,2.52,4.62,6.3l4.2,4.2L15.68,40a37.72,37.72,0,0,0,1.26,36.53c1.68,2.94,2.94,4.2,6.3,7.56,2.51,2.1,5.45,4.62,6.71,5.46a46.11,46.11,0,0,0,14.7,4.62A37,37,0,0,0,84.54,51.78a38,38,0,0,0-4.2-12.18l-1.68-2.52,4.2-4.2C86.64,28.68,87.06,27.84,87.48,26.16ZM63.54,72.77a21.58,21.58,0,0,1-26.45,3.36c-2.52-1.26-6.72-5-8-7.56a23.5,23.5,0,0,1,0-23.51c1.26-2.1,5.46-5.88,7.56-7.56A22.32,22.32,0,0,1,69.84,56.82C69.84,63.53,67.74,68.57,63.54,72.77Z" />
 </vector>
