pocket: introduce pocket bridge
This service communicates pocket state to the pocket judge kernel driver.
It maintains the pocket state by binding to the pocket service.

Ticket: NOUGAT-49

Change-Id: Iee77f767f23d3f77a0d1d871f9305f3b3c6d6630
Signed-off-by: Chris Lahaye <dev@chrislahaye.com>
Signed-off-by: Alex Naidis <alex.naidis@linux.com>
Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/core/res/res/values/dot_config.xml
+++ b/core/res/res/values/dot_config.xml
@@ -18,4 +18,7 @@
     <!-- Shows the required view for in-display fingerprint --> 
     <bool name="config_supportsInDisplayFingerprint">false</bool>
 
+    <!-- Defines the sysfs attribute path used by pocket bridge
+    to communicate pocket state to the pocket judge kernel driver. -->
+    <string name="config_pocketBridgeSysfsInpocket"></string>
 </resources>
