--- a/core/res/res/values/dot_strings.xml
+++ b/core/res/res/values/dot_strings.xml
@@ -28,4 +28,6 @@
     <string name="reboot_system_title">Restart system</string>
     <string name="reboot_system_message">Restarting system\u2026</string>
 
+    <!-- Pocket Lock -->
+    <string name="pocket_lock_message_long_press">Press and hold power button to unlock</string>
 </resources>
