QS tile titles visibility [1/2]
----
abc ezio84:
don't call textVisibility on each handleStateChanged
but expose it through TileLayout mRecords and call it only when
changing the settings

fix also title visibility not being refreshed after a
configuration change
----

Pretty simple mod to remove tile titles if and when the titles become
something that you don't want. A good case for this is if you set 7 or more
columns across, the titles move down to 2 lines and is just looks awful IMO

Before - https://i.imgur.com/G3ICaqb.png
After - https://i.imgur.com/Hb0J1XW.png

PS2 - Thanks maxwen for the know how to adjust the gap when titles
are removed

Change-Id: I46fa9ebb01bd36f6589b0c6231a80dbc87fe1ca4

--- a/packages/SystemUI/res/values/dot_dimens.xml
+++ b/packages/SystemUI/res/values/dot_dimens.xml
@@ -26,4 +26,7 @@
 
     <!-- Recognizing fingerprint animation -->
     <dimen name="fod_animation_size">280dp</dimen>
+
+    <!-- Qs visibility -->
+    <dimen name="qs_tile_height_wo_label">64dp</dimen>
 </resources>
