Battery Styles: Bring back good ol' circle battery style
* This code is based on the old Java implementation and converted to Kotlin

* Instead of creating different style within the same drawable
  create one on its own, this makes the code more readable and future proof

Anushek Prasal <anushekprasal@gmail.com>
- Convert to SettingsObserver
- Cleanup tuner code

CarbonROM:
- Remove broken battery entry from tuner list
- Add nullcheck for percentage

Dirty Unicorns:
- Adapt 'updateShowPercent' method to existing modifications
- Clean up code

Change-Id: I23798426e603b277408fb63f4898b385027e7eeb

--- a/packages/SystemUI/res/values/dot_dimens.xml
+++ b/packages/SystemUI/res/values/dot_dimens.xml
@@ -29,4 +29,7 @@
 
     <!-- Qs visibility -->
     <dimen name="qs_tile_height_wo_label">64dp</dimen>
+
+    <!-- Width of the battery icon in the status bar when set to circle style. -->
+    <dimen name="status_bar_battery_icon_circle_width">13.5dp</dimen>
 </resources>
