base: Swipe up on keyguard to use Face Unlock [1/2]
Change-Id: If5a02fa90983ef72c1a6ab0d88ca57ad6d633a3c

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4392,4 +4392,8 @@
 
     <!-- Component names of the services which will keep critical code path warm -->
     <string-array name="config_keep_warming_services" translatable="false" />
+
+    <!-- Enable face auth when swiping security view -->
+    <bool name="config_faceAuthOnSecurityView">false</bool>
+
 </resources>
