--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -4054,4 +4054,8 @@
   <java-symbol type="array" name="config_notificationMsgPkgsAllowedAsConvos" />
 
   <java-symbol type="array" name="config_keep_warming_services" />
+
+  <!-- Enable face auth when swiping security view -->
+  <java-symbol type="bool" name="config_faceAuthOnSecurityView" />
+
 </resources>
