--- a/core/res/res/values/dot_config.xml
+++ b/core/res/res/values/dot_config.xml
@@ -24,4 +24,6 @@
 
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">true</bool>
+    <!-- Defines custom OEM sensor for pocket detection. -->
+    <string name="config_pocketJudgeVendorSensorName"></string>
 </resources>
