FOD: allow user to disable night light when active [1/2]
Make this optional for some devices and config for default true on devices which weird light sensors on FOD
eg: OP7TPRO

Signed-off-by: Varun Date <date.varun123@gmail.com>
Change-Id: Idacb9a15f9507ea78306b064e8deb2e4118b385c
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -48,4 +48,6 @@
   <java-symbol type="integer" name="config_fod_pressed_color" />
   <!-- Default value for FOD animation package resources -->
   <java-symbol type="string" name="config_fodAnimationPackage" />
+  <!-- NightLight FOD -->
+  <java-symbol type="bool" name="disable_fod_night_light"/>
 </resources>
