--- a/core/res/res/values/dot_config.xml
+++ b/core/res/res/values/dot_config.xml
@@ -30,4 +30,6 @@
     <integer name="config_fod_pressed_color">1</integer>
     <!-- Default value for FOD animation package resources -->
     <string name="config_fodAnimationPackage" translatable="false">com.dot.fod.animations</string>
+    <!-- NightLight FOD -->
+    <bool name="disable_fod_night_light">false</bool>
 </resources>
