[SQUASH] SystemUI: FOD pressed colors [1/2]
Includes the following:
* https://github.com/Evolution-X/frameworks_base/commit/b70ac04e293c7a2eea2710a1a689630a74e70364
* https://github.com/Evolution-X/frameworks_base/commit/6ecbadff3550c01682a15331f3ccb0abf614d845

--- a/core/res/res/values/dot_config.xml
+++ b/core/res/res/values/dot_config.xml
@@ -26,4 +26,6 @@
     <bool name="config_pocketModeSupported">true</bool>
     <!-- Defines custom OEM sensor for pocket detection. -->
     <string name="config_pocketJudgeVendorSensorName"></string>
+    <!-- Default fod pressed color -->
+    <integer name="config_fod_pressed_color">1</integer>
 </resources>
