--- a/core/res/res/values/dot_config.xml
+++ b/core/res/res/values/dot_config.xml
@@ -28,4 +28,6 @@
     <string name="config_pocketJudgeVendorSensorName"></string>
     <!-- Default fod pressed color -->
     <integer name="config_fod_pressed_color">1</integer>
+    <!-- Default value for FOD animation package resources -->
+    <string name="config_fodAnimationPackage" translatable="false">com.dot.fod.animations</string>
 </resources>
