--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -46,4 +46,6 @@
   <java-symbol type="string" name="config_pocketJudgeVendorSensorName" />
   <!-- Default fod pressed icon -->
   <java-symbol type="integer" name="config_fod_pressed_color" />
+  <!-- Default value for FOD animation package resources -->
+  <java-symbol type="string" name="config_fodAnimationPackage" />
 </resources>
