AppLock: Improve strings and cleanup
Change-Id: I182ae71a88e7667058f518d17d4e80c6e7bc3147

--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -144,4 +144,8 @@
     <java-symbol type="bool" name="config_defaultAntiFlicker" />
     <java-symbol type="bool" name="config_filterDisplayModes" />
     <java-symbol type="array" name="config_displayModeMappings" />
+
+    <!-- App Lock -->
+    <java-symbol type="string" name="lockscreen_pattern_instructions" />
+
 </resources>
